--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ section{
     color: rgb(38, 0, 255);
     font-size: x-large;
     position: absolute;
-    margin-top: 15%;
-    margin-left: 50%;
-    transform: translate(-50%);
+    margin-top: 5%;
+    /* margin-left: 50%;
+    transform: translate(-50%); */
     z-index: 1;
     font-weight: bold;
     font-family: monospace;
