--- a/style.css
+++ b/style.css
@@ -51,3 +51,9 @@ section{
     font-weight: bold;
     font-family: monospace;
 }
+
+@media only screen and (max-width: 1000px) {
+    .text{
+        width: 92%;
+    }
+}
